Name: HaTeX
Version: 3.9.2.0
Author: Daniel Díaz
Category: Text, LaTeX
Build-type: Simple
License: BSD3
License-file: license
Maintainer: Daniel Díaz (dhelta `dot` diaz `at` gmail `dot` com)
Bug-reports: https://github.com/Daniel-Diaz/HaTeX/issues
homepage: http://daniel-diaz.github.io/projects/hatex
Synopsis: The Haskell LaTeX library.
Description: This library provides a bridge between LaTeX and Haskell, implementing the LaTeX /syntax/
             in Haskell.
             .
             Some of the things you can do with HaTeX are:
             .
             Write LaTeX documents with all the advantages you already have in Haskell (recursion,
             type system, high order functions, ...), create a LaTeX backend for your own program,
             parse a LaTeX file and obtain its Abstract Syntax Tree (AST), pretty-print Haskell
             values in LaTeX, generate TikZ scripts easily, ...
             .
             Browse the @examples@ directory in the source distribution to see some simple examples.
             It would be good to get you started. The HaTeX User's Guide is available at
             <https://github.com/Daniel-Diaz/hatex-guide/blob/master/README.md>.
Cabal-version: >= 1.10
Extra-source-files:
  ReleaseNotes
  README.md
  -- Examples
  Examples/*.hs
  -- Tests
  parsertest/*.tex
  parsertest/parsertest.hs
Extra-doc-files:
  -- TikZ
  docfiles/tikz/*.png
  -- Beamer
  docfiles/beamers/*.png

Source-repository head
  type: git
  location: git@github.com:Daniel-Diaz/HaTeX.git

Library
  Default-language: Haskell2010
  Build-depends: base == 4.*
               , bytestring >= 0.9.2.1 && < 0.11
               , transformers >= 0.2.2 && < 0.4
               , text >= 0.11.2.3 && < 2
               , attoparsec >= 0.10.2 && < 0.11
               , matrix
               , containers >= 0.4.2.1 && < 0.6
  Exposed-modules:
    Text.LaTeX
      -- Base (Core of the library)
      Text.LaTeX.Base
        Text.LaTeX.Base.Class
        Text.LaTeX.Base.Commands
        Text.LaTeX.Base.Parser
        Text.LaTeX.Base.Render
        Text.LaTeX.Base.Syntax
        Text.LaTeX.Base.Texy
        Text.LaTeX.Base.Types
        Text.LaTeX.Base.Writer
        Text.LaTeX.Base.Warnings
        -- Packages
        Text.LaTeX.Packages.AMSFonts
        Text.LaTeX.Packages.AMSMath
        Text.LaTeX.Packages.AMSThm
        Text.LaTeX.Packages.Babel
        Text.LaTeX.Packages.Beamer
        Text.LaTeX.Packages.Color
        Text.LaTeX.Packages.Fancyhdr
        Text.LaTeX.Packages.Fontenc
        Text.LaTeX.Packages.Graphicx
        Text.LaTeX.Packages.Hyperref
        Text.LaTeX.Packages.Inputenc
        -- Trees
        Text.LaTeX.Packages.Trees
          Text.LaTeX.Packages.Trees.Qtree
        -- TikZ
        Text.LaTeX.Packages.TikZ
          Text.LaTeX.Packages.TikZ.PathBuilder
          Text.LaTeX.Packages.TikZ.Simple
          Text.LaTeX.Packages.TikZ.Syntax
  Other-modules: Paths_HaTeX
  Default-extensions: OverloadedStrings
  Other-extensions: CPP
  ghc-options: -Wall -fno-warn-orphans
