Name: HaTeX
Version: 3.22.0.0
Author: Daniel Díaz
Category: LaTeX
Build-type: Simple
License: BSD3
License-file: license
Maintainer: Daniel Díaz (dhelta `dot` diaz `at` gmail `dot` com)
Bug-reports: https://github.com/Daniel-Diaz/HaTeX/issues
homepage: https://github.com/Daniel-Diaz/HaTeX/blob/master/README.md
Synopsis: The Haskell LaTeX library.
Description: This library implements the LaTeX syntax and provides some useful abstractions.
             .
             Some of the things you can do with HaTeX are:
             .
             * Write LaTeX documents with all the advantages you already have in Haskell: recursion,
               type system, high order functions, ...
             .
             * Create a LaTeX backend for your own program.
             .
             * Parse a LaTeX file and obtain its Abstract Syntax Tree (AST).
             .
             * Pretty-print Haskell values in LaTeX.
             .
             * Generate TikZ scripts (images!) easily.
             .
             Browse the @examples@ directory in the source distribution to see some simple examples.
             It might help you to get started. The HaTeX User's Guide is available at
             <https://github.com/Daniel-Diaz/hatex-guide/blob/master/README.md>.
             We also have a mailing list (<http://projects.haskell.org/cgi-bin/mailman/listinfo/hatex>)
             and an IRC channel (@#hatex@). If you just want to read a short introduction, read
             the "Text.LaTeX" module.
             .
             If you prefer to write in LaTeX and all you want is to /program/ some parts of the document,
             or if you already have the LaTeX document written and you just want to add some automatically
             generated LaTeX code somewhere, check haskintex: <http://daniel-diaz.github.io/projects/haskintex>.
             It allows you to embed Haskell in LaTeX. It also makes you easy to use HaTeX within a LaTeX document.
Cabal-version: >= 1.18
Extra-source-files:
  ReleaseNotes
  README.md
  CHANGELOG.md
  -- Examples
  Examples/*.hs
  -- Tests
  parsertest/*.tex
  parsertest/parsertest.hs
Extra-doc-files:
  -- TikZ
  docfiles/tikz/*.png
  -- Beamer
  docfiles/beamers/*.png
  -- Others
  docfiles/others/*.png

Source-repository head
  type: git
  location: git://github.com/Daniel-Diaz/HaTeX.git

Library
  Default-language: Haskell2010
  Build-depends: base == 4.*
               , bytestring >= 0.9.2.1 && < 0.11
               , text >= 0.11.2.3 && < 2
               , transformers >= 0.2.2 && < 0.6
               , containers >= 0.4.2.1 && < 0.7
               , hashable >= 1.2 && < 1.4
               , bibtex >= 0.1 && < 0.2
               , matrix
                 -- Testing
               , QuickCheck
                 -- Parsing
               , parsec >= 3.1.6
                 -- Pretty-printing
               , prettyprinter
  if impl(ghc < 7.6)
    build-depends: ghc-prim
  if impl(ghc < 8.0)
    build-depends: semigroups
  Exposed-modules:
    Text.LaTeX
      -- Base (Core of the library)
      Text.LaTeX.Base
        Text.LaTeX.Base.Class
        Text.LaTeX.Base.Commands
        Text.LaTeX.Base.Math
        Text.LaTeX.Base.Parser
        Text.LaTeX.Base.Pretty
        Text.LaTeX.Base.Render
        Text.LaTeX.Base.Syntax
        Text.LaTeX.Base.Texy
        Text.LaTeX.Base.Types
        Text.LaTeX.Base.Writer
        Text.LaTeX.Base.Warnings
        -- Packages
        Text.LaTeX.Packages.Acronym
        Text.LaTeX.Packages.AMSFonts
        Text.LaTeX.Packages.AMSMath
        Text.LaTeX.Packages.AMSSymb
        Text.LaTeX.Packages.AMSThm
        Text.LaTeX.Packages.Babel
        Text.LaTeX.Packages.Beamer
        Text.LaTeX.Packages.BibLaTeX
        Text.LaTeX.Packages.Bigstrut
        Text.LaTeX.Packages.Color
        Text.LaTeX.Packages.Fancyhdr
        Text.LaTeX.Packages.Fontenc
        Text.LaTeX.Packages.Geometry
        Text.LaTeX.Packages.Graphicx
        Text.LaTeX.Packages.Hyperref
        Text.LaTeX.Packages.LongTable
        Text.LaTeX.Packages.Lscape
        Text.LaTeX.Packages.LTableX
        Text.LaTeX.Packages.Inputenc
        Text.LaTeX.Packages.Multirow
        Text.LaTeX.Packages.QRCode
        Text.LaTeX.Packages.Relsize
        Text.LaTeX.Packages.TabularX
        -- Trees
        Text.LaTeX.Packages.Trees
          Text.LaTeX.Packages.Trees.Qtree
        -- TikZ
        Text.LaTeX.Packages.TikZ
          Text.LaTeX.Packages.TikZ.PathBuilder
          Text.LaTeX.Packages.TikZ.Simple
          Text.LaTeX.Packages.TikZ.Syntax
  Other-modules: Paths_HaTeX
  Default-extensions: OverloadedStrings, TypeFamilies
  Other-extensions: CPP
  ghc-options: -Wall -fno-warn-orphans

Test-Suite hatex-test
  Default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base == 4.*
               , HaTeX
               , tasty
               , QuickCheck
               , tasty-quickcheck
               , parsec
  ghc-options: -Wall -fno-warn-orphans
Test-Suite parser-tests
  Default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: parsertest
  main-is: parsertest.hs
  build-depends: base == 4.*
               , HaTeX
               , text
  ghc-options: -Wall
